@@ -1,0 +1,4 @@
+inst/doc
+.Rhistory
+.Rproj.user
+ctmm.Rproj
