@@ -5,11 +5,9 @@ Title: Continuous-Time Movement Modeling
 Author: Chris H. Fleming and J. M. Calabrese
 Maintainer: C. H. Fleming <flemingc@si.edu>
 Depends: R (>= 2.10)
-Imports: expm, graphics, grDevices, manipulate, MASS, methods,
-        numDeriv, pbivnorm, raster, rgdal, scales, sp, stats, utils
+Imports: expm, graphics, grDevices, manipulate, MASS, methods, numDeriv, pbivnorm, raster, rgdal, scales, sp, stats, utils
 Suggests: fftw, knitr, move
 Description: Functions for identifying, fitting, and applying continuous-space, continuous-time stochastic movement models to animal tracking data.
 License: GPL-3
 VignetteBuilder: knitr
 NeedsCompilation: no
-Packaged: 2016-05-24 23:16:29 UTC; Chris
