@@ -1,10 +1,12 @@
 0.3.3 2016-05-24
 
-  * UERE fitting now possible simultaneous with tracking data
+  * New method predict for ctmm objects
 
+  * UERE fitting now possible simultaneous with tracking data
+  
   * tag.local.identifier now used as backup to individual.local.identifier in as.telemetry
   
-  * multiple bug fixes in uere
+  * multiple bug fixes in function uere
   
   * res.space fixed in occurrence
 
